--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
+  background: #f1f5f8;
 }
