--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,35 @@
 body {
   background: #f1f5f8;
 }
+
+.chart {
+  position: relative;
+}
+.expandable-chart {
+  position: relative;
+}
+.chart::before {
+  content: " ";
+  position: absolute;
+  top: -1rem;
+  left: 50%;
+  border-left: 4px solid black;
+
+  height: 1rem;
+  width: 1px;
+}
+.expandable-chart::after {
+  content: " ";
+  position: absolute;
+  bottom: -1rem;
+  left: 50%;
+  border-left: 4px solid black;
+  height: 1rem;
+  width: 1px;
+}
+.hr {
+  background: black;
+  width: 100%;
+  height: 4px;
+  margin-bottom: 1rem;
+}
